Updated new server and client protocol. Included needed certificate files.